# smartrade

./: LICENSE  README.md
aimodels/: LICENSE.txt  README.md  pyproject.toml
aimodels/src/aimodels/: __about__.py  config.py  main.py
aimodels/src/aimodels/dto/: common.py  prediction.py
aimodels/src/aimodels/models/: stockmodel.py
aimodels/src/aimodels/services/: review.py
aimodels/src/aimodels/utils/: logger.py
aimodels/tests/: __init__.py
crawlers/: LICENSE.txt  README.md  pyproject.toml
crawlers/src/crawlers/: __about__.py  config.py  crawler.py  main.py  services.py
crawlers/src/crawlers/db/: connector.py  dao.py  downloader.py  stockcurd.py
crawlers/src/crawlers/eastmoney/: __init__.py  dto.py  netinout.py  stockrank.py
crawlers/src/crawlers/examples/: urlformat.ipynb
crawlers/src/crawlers/experiment/: dataset.py
crawlers/src/crawlers/jrj/: __init__.py  dto.py  hangqing.py
crawlers/src/crawlers/services/: ai.py  dto.py  limitup.py
crawlers/src/crawlers/sina/: amountrank.py  dto.py
crawlers/src/crawlers/ths/: __init__.py  blocktop.py  dto.py  fieldtype.py  limitdown.py  limitup.py  limitupladder.py
crawlers/src/crawlers/utils/: dateutil.py  dbutil.py  logger.py  stringutil.py
crawlers/tests/: __init__.py  test_dateutil.py
smartrade-frontend/: .eslintrc.js  README.md  index.html  package-lock.json  package.json  vite.config.ts
smartrade-frontend/src/: .env.development  App.vue  main.ts
smartrade-frontend/src/assets/styles/: global.scss
smartrade-frontend/src/components/: BoardReview.vue  Evaluation.vue  HelloWorld.vue  Prediction.vue  Review.vue  StockInfo.vue  TopStocks.vue
smartrade-frontend/src/components/chats/: ContinuousLimitUpChart.vue  LineChart.vue  TrendChart.vue
smartrade-frontend/src/components/icons/: IconLoading.vue  icons.ts
smartrade-frontend/src/layout/: TheLayout.vue  index.vue
smartrade-frontend/src/router/: index.ts
smartrade-frontend/src/services/: api.ts  requests.ts  types.ts
smartrade-frontend/src/stores/: evaluation.ts  prediction.ts
smartrade-frontend/src/utils/: stocks.ts  timeutils.ts
smartrade-frontend/src/views/: HomeView.vue
