[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aimodels"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Bruce Li", email = "jiangwlee@163.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fastapi>=0.114.2",
  "pytorch>=2.4.1",
]

[project.urls]
Documentation = "https://github.com/U.N. Owen/aimodels#readme"
Issues = "https://github.com/U.N. Owen/aimodels/issues"
Source = "https://github.com/U.N. Owen/aimodels"

[tool.hatch.version]
path = "src/aimodels/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/aimodels tests}"

[tool.coverage.run]
source_pkgs = ["aimodels", "tests"]
branch = true
parallel = true
omit = [
  "src/aimodels/__about__.py",
]

[tool.coverage.paths]
aimodels = ["src/aimodels", "*/aimodels/src/aimodels"]
tests = ["tests", "*/aimodels/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
