[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawlers"
dynamic = ["version"]
description = '行情爬虫程序'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Bruce Li", email = "jiangwlee@163.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "requests>=2.32.3",
  "pydantic>=2.9.1",
  "mysql-connector-python>=9.0.0"
]

[project.urls]
Documentation = "https://github.com/Jiangwlee/smartrade/blob/main/README.md"
Issues = "https://github.com/Jiangwlee/smartrade/issues"
Source = "https://github.com/Jiangwlee/smartrade"

[project.scripts]
smartcrawl = "crawlers.main:crawl"

[tool.hatch.version]
path = "src/crawlers/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/crawlers tests}"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12.6"]
default-args = ["tests"]
extra-args = ["-vv"]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} {args}"

[tool.coverage.run]
source_pkgs = ["crawlers", "tests"]
branch = true
parallel = true
omit = [
  "src/crawlers/__about__.py",
]

[tool.coverage.paths]
crawlers = ["src/crawlers", "*/crawlers/src/crawlers"]
tests = ["tests", "*/crawlers/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
